# LogCombinator

./: CMakeLists.txt  CheckboxDelegate.qml  CombineButton.qml  ParticlesRain.qml  README.md  logcontroller.cpp  logcontroller.h  logmodel.cpp  logmodel.h  logsfpmodel.cpp  logsfpmodel.h  main.cpp  main.qml
.github/workflows/: cmake.yml
